@@ -326,6 +326,8 @@ namespace MySql.Data.MySqlClient.Tests
             KillConnection(conn2);
             Assert.IsFalse(conn2.Ping());
             Assert.IsTrue(conn2.State == ConnectionState.Closed);
+            conn2.Open();
+            conn2.Close();
         }
 
         /// <summary>
