@@ -6,6 +6,7 @@ Version 5.1.5 -
   - Fixed problem where connection state reported through the state change handler was not
     showing Open (bug #34082)   
   - Incorporated some connection string cache optimizations sent to us by Maxim Mass (bug #34000)
+  - Fixed problem with opening a connection that was previously closed by sudden server disconnection (bug #33909)   
    
 Version 5.1.4 - 11/12/2007
   - Fixed issue where column name metadata was not using the charset given on the connection string
